--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,15 @@
 name: Build Professional Frontend
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
+    tags:
+      - v1.*
   pull_request:
-    branches: [ main ]
+    branches:
+      - main
+    tags:
+      - v1.*
 
 jobs:
   build:
