--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,15 +1,11 @@
 name: Build Professional Frontend
 on:
   push:
-    branches:
-      - main
-    tags:
-      - v1.*
+    tags: ^v[1-9]+.[0-9]+.[0-9]+
+    branches: main
   pull_request:
-    branches:
-      - main
-    tags:
-      - v1.*
+    tags: ^v/[1-9]+.[0-9]+.[0-9]+
+    branches: main
 
 jobs:
   build:
@@ -34,12 +30,14 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           
-      - name: npm install and npm run build
+      - name: npm ci and npm run build
+        # clean install (ci) of the project's dependencies -> to avoid package lock changes
         run: |
-          npm i
+          npm ci
           npm run build
           
-      - name: Push Build to Releases
+      - name: Create Release
+        if: startsWith( github.ref, 'refs/tags/v*' )
         uses: ncipollo/release-action@v1
         with:
           artifacts: "dist/professional/*"
