--- a/package.json
+++ b/package.json
@@ -10,17 +10,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~12.1.4-",
+    "@angular/animations": "~12.1.4",
     "@angular/cdk": "^12.2.1",
-    "@angular/common": "~12.1.4-",
-    "@angular/compiler": "~12.1.4-",
-    "@angular/core": "~12.1.4-",
+    "@angular/common": "~12.1.4",
+    "@angular/compiler": "~12.1.4",
+    "@angular/core": "~12.1.4",
     "@angular/flex-layout": "^12.0.0-beta.34",
-    "@angular/forms": "~12.1.4-",
+    "@angular/forms": "~12.1.4",
     "@angular/material": "^12.2.1",
-    "@angular/platform-browser": "~12.1.4-",
-    "@angular/platform-browser-dynamic": "~12.1.4-",
-    "@angular/router": "~12.1.4-",
+    "@angular/platform-browser": "~12.1.4",
+    "@angular/platform-browser-dynamic": "~12.1.4",
+    "@angular/router": "~12.1.4",
     "@fortawesome/angular-fontawesome": "^0.9.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-brands-svg-icons": "^5.15.3",
@@ -37,7 +37,7 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.1.4",
     "@angular/cli": "~12.1.4",
-    "@angular/compiler-cli": "~12.1.4-",
+    "@angular/compiler-cli": "~12.1.4",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.8.0",
