--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,8 +33,8 @@ jobs:
       - name: npm ci and npm run build
         # clean install (ci) of the project's dependencies -> to avoid package lock changes
         run: |
-          npm ci
-          npm run ci:build
+          npm i
+          npm run build
           
       - name: Create Release
         if: startsWith( github.ref, 'refs/tags/v*' )
