--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,11 +1,9 @@
 name: Build Professional Frontend
 on:
   push:
-    tags: ^v[1-9]+.[0-9]+.[0-9]+
-    branches: main
+    branches: [ main ]
   pull_request:
-    tags: ^v/[1-9]+.[0-9]+.[0-9]+
-    branches: main
+    branches: [ main ]
 
 jobs:
   build:
@@ -13,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [14.x]
+        node-version: [ 14.x ]
         
     steps:
       - uses: actions/checkout@v2
@@ -35,10 +33,3 @@ jobs:
         run: |
           npm ci
           npm run build
-          
-      - name: Create Release
-        if: startsWith( github.ref, 'refs/tags/v*' )
-        uses: ncipollo/release-action@v1
-        with:
-          artifacts: "dist/professional/*"
-          token: ${{ secrets.TOKEN }}
